--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
   "type": "commonjs",
   "dependencies": {
     "ajv": "^8.17.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
-    "config": "^4.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.15"
   }
 }
